--- a/css/main.css
+++ b/css/main.css
@@ -5746,7 +5746,7 @@ color: var(--color-body);
 }
 
 .about-banner {
-	background-image: url('../img/visual-small-01.jpg');
+	background-image: url('../img/about-breadcrumb.jpg');
 }
 
 .portfolio-banner {
@@ -5754,7 +5754,7 @@ color: var(--color-body);
 }
 
 .portfolio-banner-v1 {
-	background-image: url('../img/visual-small-04.jpg');
+	background-image: url('../img/portfolio-banner.jpg');
 }
 
 .portfolio-banner-v2 {
@@ -5794,7 +5794,7 @@ color: var(--color-body);
 }
 
 .blog-default-banner {
-	background-image: url('../img/blog-01.jpg');
+	background-image: url('../img/blog-breadcrumb.jpg');
 }
 
 .intro-banner {
