--- a/css/custom.css
+++ b/css/custom.css
@@ -18,3 +18,6 @@
         max-width: 100%;
     }
 }
+@media (max-width:767px){
+    .carousel-control-prev, .carousel-control-next{ width: 30px;}
+}
